[package]
name = "bot_script_runner"
version = "0.1.0"
authors = ["maa123 <maa123.lq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
serde = { version = "1", features = ["derive"] }
Boa = "0.11.0"
tokio = { version = "1.5.0", features = ["time", "rt", "macros", "rt-multi-thread"] }