[package]
name = "bot_script_runner"
version = "0.1.0"
authors = ["maa123 <maa123.lq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
v8 = "0.75.0" # バージョンを 0.80.0 から 0.75.0 に変更
# [patch.crates-io] セクションは削除
which = "=4.4.0" # whichのバージョンを固定